k8s/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xambook-frontend
  namespace: default

spec:
  replicas: 2

  selector:
    matchLabels:
      app: xambook-frontend

  template:
    metadata:
      labels:
        app: xambook-frontend

    spec:
      containers:
        - name: frontend
          image: harishsudalaimani/xambook-frontend:08ef2047c30988b3b4f95b3f577d790db72b3716
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
