k8s/frontend/route.yaml

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-route
  namespace: default

spec:
  parentRefs:
    - name: shared-gateway
      namespace: default

  hostnames:
    - xambook.com
    - www.xambook.com

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: xambook-frontend
          port: 80
